--- a/2020S2-proj1-Template.ipynb
+++ b/2020S2-proj1-Template.ipynb
@@ -176,15 +176,8 @@
     "            \n",
     "    return outdict\n",
     "\n",
-    "def train(x, pc, pxc):\n",
-    "    class_probs = []\n",
-    "    for y in range(len(pc)):\n",
-    "        class_prob=pc[y]/sum(pc)\n",
-    "        for fidx, f in enumerate(x):\n",
-    "            if f in pxc[y][fidx]:\n",
-    "                class_prob = class_prob * pxc[y][fidx][f]\n",
-    "        class_probs.append(class_prob)\n",
-    "    return class_probs, np.argmax([class_probs])\n",
+    "def train(x, y):\n",
+    "    return p_xy(x, y)\n",
     "\n",
     "#for x in X_train:\n",
     "#    print(train(x, py, pxy))\n",
@@ -195,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,19 +201,27 @@
     "            if f in pxc[y][fidx]:\n",
     "                class_prob = class_prob * pxc[y][fidx][f]\n",
     "        class_probs.append(class_prob)\n",
-    "    return class_probs, np.argmax([class_probs])"
+    "    return class_probs, np.argmax([class_probs])\n",
+    "\n",
+    "#attr, labels = preprocess(\"stroke_update.csv\")\n",
+    "#X_train, X_test, y_train, y_test = split_data(attr, labels)\n",
+    "#pxy = p_xy(X_train, y_train)\n",
+    "#py = p_y(y_train)\n",
+    "\n",
+    "#for x in X_test:\n",
+    "#    print(predict(x, py, pxy))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This function should evaluate a set of predictions in terms of metrics\n",
     "# Function to evaluate a set of predictions in terms of metrics\n",
     "from sklearn import metrics\n",
-    "def evaluate(pred,true):\n",
+    "def evaluate(pred, true):\n",
     "    CM = metrics.confusion_matrix(true, pred) # Confusion Matrix\n",
     "    Acc = metrics.accuracy_score(true, pred) # Accuracy\n",
     "    precf1 = metrics.precision_recall_fscore_support(true, pred) # Precision, Recall and F1-score\n",
@@ -229,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -239,23 +240,23 @@
       "\n",
       "evaluation using training data\n",
       "Confusion Matrix:\n",
-      "[[1559  197]\n",
-      " [ 180  256]]\n",
-      "accuracy: 0.8280109489051095\n",
-      "accuracy by sklearn.metric: 0.8280109489051095\n",
-      "precision: [0.89649224 0.56512141]\n",
-      "recall: [0.88781321 0.58715596]\n",
-      "F1: [0.89213162 0.57592801]\n",
+      "[[1575  182]\n",
+      " [ 193  242]]\n",
+      "accuracy: 0.8289233576642335\n",
+      "accuracy by sklearn.metric: 0.8289233576642335\n",
+      "precision: [0.8908371  0.57075472]\n",
+      "recall: [0.89641434 0.55632184]\n",
+      "F1: [0.89361702 0.56344587]\n",
       "\n",
       "evaluation using test data\n",
       "Confusion Matrix:\n",
-      "[[390  46]\n",
-      " [ 75  37]]\n",
-      "accuracy: 0.7791970802919708\n",
-      "accuracy by sklearn.metric: 0.7791970802919708\n",
-      "precision: [0.83870968 0.44578313]\n",
-      "recall: [0.89449541 0.33035714]\n",
-      "F1: [0.86570477 0.37948718]\n"
+      "[[380  55]\n",
+      " [ 68  45]]\n",
+      "accuracy: 0.7755474452554745\n",
+      "accuracy by sklearn.metric: 0.7755474452554745\n",
+      "precision: [0.84821429 0.45      ]\n",
+      "recall: [0.87356322 0.39823009]\n",
+      "F1: [0.86070215 0.42253521]\n"
      ]
     }
    ],
