--- a/2020S2-proj1-Template.ipynb
+++ b/2020S2-proj1-Template.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-96b7d14b94e1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#testing purpose\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0moutdict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0md\u001b[0m \u001b[0;32min\u001b[0m \u001b[0moutdict\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mf\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-6-96b7d14b94e1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#testing purpose\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0moutdict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0md\u001b[0m \u001b[0;32min\u001b[0m \u001b[0moutdict\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mf\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mNameError\u001b[0m: name 'X_train' is not defined"
      ]
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,36 +284,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1, 0, 2, 1, 0, 0, 1, 1, 0, 0]]\n",
       "\n",
       "evaluation using training data\n",
       "Confusion Matrix:\n",
-      "[[1521  224]\n",
-      " [ 253  194]]\n",
-      "accuracy: 0.7823905109489051\n",
-      "accuracy by sklearn.metric: 0.7823905109489051\n",
-      "precision: [0.85738444 0.46411483]\n",
-      "recall: [0.87163324 0.43400447]\n",
-      "F1: [0.86445013 0.44855491]\n",
-      "Zero-R: 0.7960766423357665\n",
+      "[[1525  228]\n",
+      " [ 245  194]]\n",
+      "accuracy: 0.7842153284671532\n",
+      "accuracy by sklearn.metric: 0.7842153284671532\n",
+      "precision: [0.86158192 0.45971564]\n",
+      "recall: [0.86993725 0.44191344]\n",
+      "F1: [0.86573943 0.45063879]\n",
+      "Zero-R: 0.7997262773722628\n",
       "\n",
       "evaluation using test data\n",
       "Confusion Matrix:\n",
-      "[[397  50]\n",
-      " [ 62  39]]\n",
-      "accuracy: 0.7956204379562044\n",
-      "accuracy by sklearn.metric: 0.7956204379562044\n",
-      "precision: [0.86492375 0.43820225]\n",
-      "recall: [0.88814318 0.38613861]\n",
-      "F1: [0.87637969 0.41052632]\n",
-      "Zero-R: 0.8156934306569343\n"
+      "[[383  56]\n",
+      " [ 59  50]]\n",
+      "accuracy: 0.7901459854014599\n",
+      "accuracy by sklearn.metric: 0.7901459854014599\n",
+      "precision: [0.86651584 0.47169811]\n",
+      "recall: [0.87243736 0.4587156 ]\n",
+      "F1: [0.86946652 0.46511628]\n",
+      "Zero-R: 0.801094890510949\n"
      ]
     }
    ],
@@ -393,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,9 +414,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix:\n",
+      "[[364  75]\n",
+      " [ 72  37]]\n",
+      "accuracy: 0.7317518248175182\n",
+      "precision: [0.83486239 0.33035714]\n",
+      "recall: [0.82915718 0.33944954]\n",
+      "F1: [0.832      0.33484163]\n"
+     ]
+    }
+   ],
    "source": [
     "CM, Acc, precf1 = evaluate(preds, y_test)\n",
     "print(\"Confusion Matrix:\\n{}\\naccuracy: {}\\nprecision: {}\\nrecall: {}\\nF1: {}\".format(CM, \n",
@@ -429,17 +442,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(0.8266423357664233, 10)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def evaluate_knnImplementation(K):\n",
     "    \n",
@@ -482,17 +487,19 @@
     "    highestAcc = 0.0\n",
     "    bestK = 0\n",
     "    resultKNN = 0\n",
+    "    listOfKNN = []\n",
     "    for i in range(169):\n",
     "        resultKNN = calculateKNN((i + 1))\n",
+    "        listOfKNN.append(resultKNN)\n",
     "        if(highestAcc < resultKNN):\n",
     "            highestAcc = resultKNN\n",
     "            bestK = i\n",
     "    \n",
-    "    return highestAcc, (bestK + 1)\n",
+    "    return highestAcc, (bestK + 1), listOfKNN\n",
     "\n",
     "\n",
     "#evaluate_knnImplementation(K=1) \n",
-    "print(findTheBestKNN())"
+    "#print(findTheBestKNN())"
    ]
   },
   {
@@ -561,35 +568,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KNN HighestAcc:  0.8266423357664233 \n",
-      "Best-K:  10\n",
       "\n",
       "\n",
-      "K =  10\n",
+      "K =  6\n",
       "Confusion Matrix:\n",
-      "[[438   9]\n",
-      " [ 86  15]]\n",
-      "accuracy: 0.8266423357664233\n",
-      "accuracy by sklearn.metric: 0.8266423357664233\n",
-      "precision: [0.83587786 0.625     ]\n",
-      "recall: [0.97986577 0.14851485]\n",
-      "F1: [0.90216272 0.24      ]\n",
-      "Zero-R: 0.8156934306569343\n"
+      "[[423  16]\n",
+      " [ 89  20]]\n",
+      "accuracy: 0.8083941605839416\n",
+      "accuracy by sklearn.metric: 0.8083941605839416\n",
+      "precision: [0.82617188 0.55555556]\n",
+      "recall: [0.96355353 0.18348624]\n",
+      "F1: [0.88958991 0.27586207]\n",
+      "Zero-R: 0.801094890510949\n",
+      "max:  0.8083941605839416  min:  0.7317518248175182\n"
      ]
     }
    ],
    "source": [
     "# K-NN implementation\n",
-    "highestAcc, bestK = findTheBestKNN()\n",
-    "print(\"KNN HighestAcc: \", highestAcc, \"\\nBest-K: \", bestK)\n",
-    "knnImplementation(K=bestK)"
+    "highestAcc, bestK, listOfKNN = findTheBestKNN()\n",
+    "#print(\"KNN HighestAcc: \", highestAcc, \"\\nBest-K: \", bestK)\n",
+    "evaluate_knnImplementation(K=bestK)\n",
+    "pp = pprint.PrettyPrinter(indent=4)\n",
+    "#pp.pprint(listOfKNN)\n",
+    "\n",
+    "print(\"max: \", max(listOfKNN), \" min: \", min(listOfKNN))"
    ]
   },
   {
@@ -598,9 +608,9 @@
    "source": [
     "- b) As we implemented K-NN, it can be found that the optimal value for K is 10 where the accuracy is 0.8266423357664233. It is slightly similar with the number accuracy with Zero-R model which is 0.815693430656934. \n",
     "\n",
-    "- c) \n",
+    "- c) As we implemented K-NN, it can be seen that KNN is not sensitive to imbalanced data. Considering the provided data using evaluate_knnImplementation, it is shown that the range of data between 0.7317518248175182 and 0.8083941605839416. \n",
     "\n",
-    "- d)"
+    "- d) Comparing the accuracy betweem Naive Bayes and K-NN is"
    ]
   }
  ],
